# veritable-records-of-the-joseon-dynasty-search-tool

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  run_server.sh
src/: schemas.py  server.py
src/config/: settings.py
src/tools/: silloc_search.py
