[project]
name = "mcp-silloc-server"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
  "fastmcp>=2.12.5",
  "pydantic~=2.0",
  "beautifulsoup4>=4.12.0",
  "requests",
]

[tool.ruff.lint]
extend-select = [
  "ANN",
  "B",
  "C4",
  "D",
  "I",
  "N801",
  "N804",
  "N805",
  "PD",
  "PLR2004",
  "PTH",
  "Q",
  "S",
  "UP",
  "YTT",
]

ignore = [
  "D415",
  "ANN002",
  "ANN003",
  "ANN101",
  "B905",
  "S104",
]

[tool.ruff.lint.per-file-ignores]
"src/mcp_server/tools/silloc_search.py" = [
  "S314",
]

[tool.ruff.lint.pydocstyle]
convention = "google"